# pymupdf4llm-modern-rapidocr-demo

./: README.md  pyproject.toml
.github/workflows/: compatibility.yml
output/: apple_10k_page50.md  chinese_bank_cashflow.md  dongxing_mining_report.md  galaxy_securities_disclaimer.md  mixed_workbook_page.md  notes_handwritten_mixed.md  sizingchart_page1.md  summary.json  test_page1.md
scripts/: ci_compat_check.py
src/pymupdf4llm_modern_rapidocr_demo/: __init__.py  parse_samples.py  rapidocr_latest_compat.py
