[project]
name = "pymupdf4llm-modern-rapidocr-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymupdf4llm==1.28.0",
    "rapidocr>=3.9.1",
]

[project.scripts]
pymupdf4llm-modern-rapidocr-demo = "pymupdf4llm_modern_rapidocr_demo:main"

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"
